# event-manage-service

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/adapter/inbound/http/: service_log_router.py
src/adapter/inbound/websocket/: socketio_inbound_adapter.py
src/adapter/outbound/messaging/: socektio_outbound_adapter.py
src/adapter/outbound/persistence/: service_log_repository_impl.py
src/application/dto/: service_log_dto.py  socketio_dto.py
src/application/port/inbound/: sevice_log_inbound_port.py  socketio_inbound_port.py
src/application/port/outbound/: service_log_repository.py  socketio_outbound_port.py
src/application/usecases/: broadcast_stream_usecase.py  request_log_usecase.py
src/config/: constants.py  container.py  settings.py
src/domain/model/: request_log.py
src/domain/service/: request_log_service.py  stream_management_service.py
src/event_manage_service/: main.py
src/event_manage_service/application/dto/: socketio_dto.py
src/event_manage_service/application/usecases/: broadcast_stream_usecase.py  request_log_usecase.py
src/event_manage_service/config/: container.py
src/event_manage_service/domain/service/: request_log_service.py
test/: conftest.py
test/adapter/inbound/websocket/: test_socketio_inbound_adapter.py  (+1 more)
test/application/usecases/: test_broadcast_stream_usecase.py  test_request_log_usecase.py
test/domain/model/: test_request_log.py
test/domain/service/: test_request_log_service.py  test_stream_management_service.py
test/integration/: test_http_api_integration.py  test_socketio_integration.py
(+16 files in other folders)
